@@ -1,49 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/llServiceIcons"
-    android:layout_width="wrap_content" >
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/ivServiceMD3g"
-        style="@style/styleServiceIcons"
-        android:src="@drawable/serviceicon_md_2g3g"
-        android:tag="mobiledata3g" />
+    <LinearLayout
+        android:id="@+id/llServiceIcons1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
 
-    <ImageView
-        android:id="@+id/ivServiceMDCon"
-        style="@style/styleServiceIcons"
-        android:src="@drawable/serviceicon_mobiledata_con"
-        android:tag="mobiledataConnection" />
+        <ImageView
+            android:id="@+id/ivServiceMD3g"
+            style="@style/styleServiceIcons"
+            android:src="@drawable/serviceicon_md_2g3g"
+            android:tag="mobiledata3g" />
 
-    <ImageView
-        android:id="@+id/ivServiceSync"
-        style="@style/styleServiceIcons"
-        android:src="@drawable/serviceicon_sync"
-        android:tag="backgroundsync" />
+        <ImageView
+            android:id="@+id/ivServiceMDCon"
+            style="@style/styleServiceIcons"
+            android:src="@drawable/serviceicon_mobiledata_con"
+            android:tag="mobiledataConnection" />
 
-    <ImageView
-        android:id="@+id/ivServiceWifi"
-        style="@style/styleServiceIcons"
-        android:src="@drawable/serviceicon_wifi"
-        android:tag="wifi" />
+        <ImageView
+            android:id="@+id/ivServiceSync"
+            style="@style/styleServiceIcons"
+            android:src="@drawable/serviceicon_sync"
+            android:tag="backgroundsync" />
+    </LinearLayout>
 
-    <ImageView
-        android:id="@+id/ivServiceGPS"
-        style="@style/styleServiceIcons"
-        android:src="@drawable/serviceicon_gps"
-        android:tag="gps" />
+    <LinearLayout
+        android:id="@+id/llServiceIcons2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
 
-    <ImageView
-        android:id="@+id/ivServiceBluetooth"
-        style="@style/styleServiceIcons"
-        android:src="@drawable/serviceicon_bluetooth"
-        android:tag="bluetooth" />
+        <ImageView
+            android:id="@+id/ivServiceWifi"
+            style="@style/styleServiceIcons"
+            android:src="@drawable/serviceicon_wifi"
+            android:tag="wifi" />
 
-    <ImageView
-        android:id="@+id/ivServiceAirplane"
-        style="@style/styleServiceIcons"
-        android:layout_height="wrap_content"
-        android:src="@drawable/serviceicon_airplane"
-        android:tag="airplainMode" />
+        <ImageView
+            android:id="@+id/ivServiceGPS"
+            style="@style/styleServiceIcons"
+            android:src="@drawable/serviceicon_gps"
+            android:tag="gps" />
+
+        <ImageView
+            android:id="@+id/ivServiceBluetooth"
+            style="@style/styleServiceIcons"
+            android:src="@drawable/serviceicon_bluetooth"
+            android:tag="bluetooth" />
+
+        <ImageView
+            android:id="@+id/ivServiceAirplane"
+            style="@style/styleServiceIcons"
+            android:layout_height="wrap_content"
+            android:src="@drawable/serviceicon_airplane"
+            android:tag="airplainMode" />
+    </LinearLayout>
 
 </LinearLayout>
