@@ -7,6 +7,4 @@
         android:key="prefKeyHasWidget"
         android:title="@string/prefHasWidget" />
 
-    <Preference android:key="prefKeyAppwidgetCount" />
-
 </PreferenceScreen>
