@@ -1,0 +1,7 @@
+package ch.amana.android.cputuner.view.appwidget;
+
+
+
+public class ProfileAppwidgetProvider2x1 extends ProfileAppwidgetProvider {
+
+}
